  * data/featured.menu.in:
    - Update featured applications list per Desktop team (LP: #548534)
    - Feature 'fretsonfire-game' rather than 'fretsonfire' (LP: #538646)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 18:08:08 +0200

software-center (2.0.3) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * debian/control:
    - updated Vcs-Bzr location to point to lucid branch

  [ Olivier Tilloy ]
  * data/templates/AppDetailsView.html:
    - fix missing padding for small details window sizes (LP: #560026)
  * softwarecenter/view/widgets/searchentry.py:
   - Set the search entry's text color to black when not empty.
     This makes it readable on dark themes with a light text color by  
     default (LP: #500174)
  * softwarecenter/app.py:
    - avoid 100% usage when waiting for software-sources to finish
      (LP: #459521)
  * softwarecenter/view/navhistory.py:
    - keep the search terms updated to ensure the navigation history
      always has the latest used search terms (LP: #537512)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Apr 2010 17:55:55 +0200

software-center (2.0.2) lucid; urgency=low

  * softwarecenter/view/appview.py:
    - improve responsiveness of the listview by caching the 
      rendered icons (LP: #556290)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Sun, 18 Apr 2010 13:42:50 +0200

software-center (2.0.1) lucid; urgency=low

  [ Olivier Tilloy ]
  * When computing the size of a PathPart, always set the requested height
    of the parent PathBar. This prevents the navigation bar from
    "disappearing" (its height was somehow set to 1) (LP: #564042)

  [ Michael Vogt ]
  * cherry r730 lp:~mmcg069/software-center/minor-change/changes:
    - fix CellRendererAppView text rendering when using hicolor gtk theme
    (LP: #564694)
  * softwarecenter/view/viewswitcher.py:
    - fix displaying duplicated entries in the partner channel
      (LP: #564789)
  * softwarecenter/view/availablepane.py, 